# hyprglot

./: .gitignore  CMakeLists.txt  Makefile  hyprpm.toml
src/: globals.hpp  main.cpp
